syntax="proto3";
package interactive.v1;
option go_package="interactive/v1";

service InteractiveService {
    rpc IncrReadCnt( IncrReadCntRequest) returns (IncrReadCntResponse);
    rpc  Like(LikeRequest) returns (LikeResponse);
    rpc CancelLike(CancelLikeRequest) returns (CancelLikeResponse);
    rpc  Collect(CollectRequest) returns (CollectResponse);
    rpc  Get(GetRequest) returns (GetResponse);
    rpc GetByIds(GetByIdsRequest) returns(GetByIdsResponse);
}

message Interactive {
  int64 BizId  = 1;
  int64 ReadCnt = 2;
  int64 LikeCnt =3;
  int64 CollectCnt =4;
  bool Liked =5;
  bool Collected =6;
  string  Biz = 7;
}

message IncrReadCntRequest {
  string biz = 1;
  int64 biz_id = 2;
}

message IncrReadCntResponse {}

message LikeRequest {
  string biz = 1;
  int64 biz_id = 2;
  int64 uid = 3;
}

message LikeResponse {}

message CancelLikeRequest {
  string biz = 1;
  int64 biz_id = 2;
  int64 uid = 3;
}

message CancelLikeResponse {}

message CollectRequest {
  string biz = 1;
  int64 biz_id = 2;
  int64 cid = 3;
  int64 uid = 4;
}

message CollectResponse {}

message GetRequest {
  string biz = 1;
  int64 biz_id = 2;
  int64 uid = 3;
}

message GetResponse {
  Interactive intr = 1;
}

message GetByIdsRequest {
  string biz = 1;
  repeated int64 bizIds = 2;
}

message GetByIdsResponse {
  map<int64, Interactive> intrs = 1;
}